--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/module-alias": "^2.0.4",
     "@types/needle": "^3.3.0",
     "@types/node": "^18.19.8",
+    "@types/node-fetch": "^2.6.12",
     "@types/sharp": "^0.31.1",
     "@types/string-similarity": "^4.0.2",
     "@types/uuid": "^9.0.7",
