First item for vue3

--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "autofix:browser": "eslint --fix --ext .ts,.vue src/dashboard && eslint --fix --ext .ts,.vue src/graphics && eslint --fix --ext .ts,.vue src/browser_shared",
     "autofix:extension": "eslint --fix --ext .ts src/extension && eslint --fix --ext .d.ts src/types",
     "build": "run-s build:*",
-    "build:browser": "cross-env NODE_ENV=production webpack",
+    "build:browser": "cross-env NODE_ENV=production vite build",
     "build:extension": "tsc -b tsconfig.extension.json",
     "clean": "trash node_modules/.cache && trash dashboard && trash graphics && trash extension",
     "schema-types": "nodecg schema-types",
     "start": "node ../..",
     "watch": "run-p watch:*",
-    "watch:browser": "webpack -w",
+    "watch:browser": "vite -w",
     "watch:extension": "tsc -b tsconfig.extension.json -w"
   },
   "dependencies": {
@@ -46,6 +46,7 @@
     "node-fetch": "^2.7.0",
     "obs-websocket-js": "4",
     "osc": "^2.4.5",
+    "pinia": "^3.0.1",
     "pusher-js": "^7.1.1-beta",
     "sharp": "^0.33.2",
     "socket.io": "^4.7.4",
@@ -57,7 +58,7 @@
     "string-similarity": "^4.0.4",
     "tiny-typed-emitter": "^2.1.0",
     "uuid": "^9.0.1",
-    "ws": "^8.16.0",
+    "ws": "^8.18.1",
     "xkeys": "^3.1.2"
   },
   "devDependencies": {
@@ -66,6 +67,8 @@
     "@fontsource/roboto": "^4.5.8",
     "@mdi/font": "^7.4.47",
     "@nodecg/types": "^2.1.12",
+    "@quasar/extras": "^1.15.11",
+    "@quasar/vite-plugin": "^1.7.0",
     "@types/amqp-connection-manager": "^3.4.1",
     "@types/amqplib": "^0.10.5",
     "@types/async": "^3.2.24",
@@ -75,66 +78,51 @@
     "@types/markdown-it": "^14.1.2",
     "@types/module-alias": "^2.0.4",
     "@types/needle": "^3.3.0",
-    "@types/node": "^18.19.8",
+    "@types/node": "^20.17.0",
     "@types/node-fetch": "^2.6.12",
     "@types/sharp": "^0.31.1",
     "@types/string-similarity": "^4.0.2",
     "@types/uuid": "^9.0.7",
-    "@types/webpack-env": "^1.18.4",
     "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "@vitejs/plugin-vue": "^4.6.2",
     "@vue/component-compiler-utils": "^3.3.0",
-    "copy-webpack-plugin": "^10.2.0",
+    "@vueuse/head": "^1.1.15",
     "cross-env": "^7.0.3",
     "css-loader": "^6.9.1",
     "dayjs": "^1.11.10",
     "deepmerge": "^4.3.1",
     "dompurify": "^3.2.3",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.2.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-import-resolver-webpack": "^0.13.8",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-vue": "^8.7.1",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-vue": "^9.9.0",
     "file-loader": "^6.2.0",
     "fitty": "^2.4.2",
-    "fork-ts-checker-webpack-plugin": "^6.5.3",
     "globby": "^12.2.0",
     "gsap": "^3.12.5",
-    "html-webpack-plugin": "^5.6.0",
     "markdown-it": "^14.1.0",
     "mini-css-extract-plugin": "^2.7.7",
-    "nodecg": "^2.4.3",
+    "nodecg-cli": "^8.6.0",
+    "nodecg-types": "^1.9.0",
+    "nodecg-vue-composable": "^1.1.0",
     "npm-run-all": "^4.1.5",
-    "sass": "~1.32",
-    "sass-loader": "^12.6.0",
+    "sass-embedded": "^1.77.8",
     "style-loader": "^3.3.4",
     "trash-cli": "^5.0.0",
     "ts-essentials": "^9.4.1",
     "ts-loader": "^9.5.1",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.9.5",
-    "vue": "^2.7.16",
-    "vue-class-component": "^7.2.6",
-    "vue-eslint-parser": "^8.3.0",
-    "vue-hot-reload-api": "^2.3.4",
-    "vue-loader": "^15.11.1",
-    "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.6.5",
-    "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.7.16",
-    "vuedraggable": "^2.24.3",
-    "vuetify": "^2.7.1",
-    "vuetify-loader": "^1.9.2",
-    "vuex": "^3.6.2",
-    "vuex-class": "^0.3.2",
-    "vuex-class-state2way": "^1.0.1",
-    "vuex-module-decorators": "^1.2.0",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-livereload-plugin": "^3.0.2"
+    "vite": "5.4.6",
+    "vite-plugin-checker": "^0.5.6",
+    "vite-plugin-nodecg": "^2.1.0",
+    "vue": "^3.2.47",
+    "vue-eslint-parser": "^9.1.0",
+    "vue-tsc": "^1.2.1",
+    "vuedraggable": "^2.24.3"
   },
   "nodecg": {
     "compatibleRange": "^1.9.0||^2",
