--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "vite-plugin-nodecg": "^2.1.0",
     "vue": "^3.2.47",
     "vue-eslint-parser": "^9.1.0",
+    "vue-router": "4",
     "vue-tsc": "^1.2.1",
     "vuedraggable": "^2.24.3"
   },
