--- a/tsconfig.browser.json
+++ b/tsconfig.browser.json
@@ -18,7 +18,7 @@
       "dom.iterable",
       "scripthost"
     ],                                                   /* Specify a set of bundled library declaration files that describe the target runtime environment. */
-    // "jsx": "preserve",                                /* Specify what JSX code is generated. */
+    "jsx": "preserve",                                /* Specify what JSX code is generated. */
     "experimentalDecorators": true,                      /* Enable experimental support for TC39 stage 2 draft decorators. */
     // "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
     // "jsxFactory": "",                                 /* Specify the JSX factory function used when targeting React JSX emit, e.g. 'React.createElement' or 'h' */
@@ -48,10 +48,9 @@
     },                                                   /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
-    "types": [
-      "webpack-env",
-      "vuetify"
-    ],                                                   /* Specify type package names to be included without being referenced in a source file. */
+//    "types": [
+//      "vuetify"
+//    ],                                                   /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "resolveJsonModule": true,                        /* Enable importing .json files */
     // "noResolve": true,                                /* Disallow `import`s, `require`s or `<reference>`s from expanding the number of files TypeScript should add to a project. */
@@ -120,8 +119,8 @@
   "include": [
     "src/browser_shared/**/*.ts",
     "src/browser_shared/**/*.vue",
-    "src/dashboard/**/*.ts",
-    "src/dashboard/**/*.vue",
+//    "src/dashboard/**/*.ts",
+//    "src/dashboard/**/*.vue",
     "src/graphics/**/*.ts",
     "src/graphics/**/*.vue",
     "src/types/**/*.d.ts",
