--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "schema-types": "nodecg schema-types",
     "start": "node ../..",
     "watch": "run-p watch:*",
-    "watch:browser": "vite -w",
+    "watch:browser": "vite",
     "watch:extension": "tsc -b tsconfig.extension.json -w"
   },
   "dependencies": {
@@ -114,6 +114,7 @@
     "trash-cli": "^5.0.0",
     "ts-essentials": "^9.4.1",
     "ts-loader": "^9.5.1",
+    "types": "link:@esamarathon/mq-events/types",
     "typescript": "^4.9.5",
     "vite": "5.4.6",
     "vite-plugin-checker": "^0.5.6",
