--- a/package.json
+++ b/package.json
@@ -123,7 +123,8 @@
     "vue-eslint-parser": "^9.1.0",
     "vue-router": "4",
     "vue-tsc": "^1.2.1",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "vuetify": "^3.8.1"
   },
   "nodecg": {
     "compatibleRange": "^2",
