Move scene control to own component

--- a/package.json
+++ b/package.json
@@ -194,7 +194,7 @@
         "width": 3,
         "file": "video-player-control/main.html",
         "workspace": "Z - BSG Advanced",
-        "headerColor": "#C43B16"
+        "headerColor": "#129e03"
       },
       {
         "name": "upcoming-run-control",
