--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "moment": "^2.30.1",
     "needle": "^3.3.1",
     "node-fetch": "^2.7.0",
-    "obs-websocket-js": "4",
+    "obs-websocket-js": "^5.0.7",
     "osc": "^2.4.5",
     "pinia": "^3.0.1",
     "pusher-js": "^7.1.1-beta",
@@ -114,7 +114,6 @@
     "trash-cli": "^5.0.0",
     "ts-essentials": "^9.4.1",
     "ts-loader": "^9.5.1",
-    "types": "link:@esamarathon/mq-events/types",
     "typescript": "^4.9.5",
     "vite": "5.4.6",
     "vite-plugin-checker": "^0.5.6",
